[package]
name = "rust-vben"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "migrate"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
hyper = "0.14"
tower = "0.4"
